<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_note_write"
            style="@style/App.Toolbar.Navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="노트 작성" />

        <TextView
            android:id="@+id/tv_write_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_note_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_note_write" />

        <EditText
            android:id="@+id/et_write_title"
            style="@style/AppEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:hint="@string/hint_write_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="@id/tv_write_title"
            app:layout_constraintStart_toStartOf="@id/tv_write_title"
            app:layout_constraintTop_toBottomOf="@id/tv_write_title" />

        <TextView
            android:id="@+id/tv_what_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_what_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_write_title" />

        <EditText
            android:id="@+id/et_write_content"
            style="@style/AppEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_write_content"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="4"
            app:layout_constraintEnd_toEndOf="@id/tv_write_title"
            app:layout_constraintStart_toStartOf="@id/tv_write_title"
            app:layout_constraintTop_toBottomOf="@id/tv_what_content" />

        <TextView
            android:id="@+id/tv_write_think"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_my_think"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_write_content" />

        <EditText
            android:id="@+id/et_write_think"
            style="@style/AppEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_write_my_think"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="4"
            app:layout_constraintEnd_toEndOf="@id/tv_write_title"
            app:layout_constraintStart_toStartOf="@id/tv_write_title"
            app:layout_constraintTop_toBottomOf="@id/tv_write_think" />

        <TextView
            android:id="@+id/tv_write_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/text_summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_write_think" />

        <EditText
            android:id="@+id/et_write_summary"
            style="@style/AppEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_write_summary"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="4"
            app:layout_constraintEnd_toEndOf="@id/tv_write_title"
            app:layout_constraintStart_toStartOf="@id/tv_write_title"
            app:layout_constraintTop_toBottomOf="@id/tv_write_summary" />

        <Button
            android:id="@+id/btn_write_complete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/label_write_complete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_write_title"
            app:layout_constraintStart_toStartOf="@id/tv_write_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>